@@ -54,12 +54,18 @@ class SkinTemplate extends Skin {
 		$moduleStyles = array(
 			'mediawiki.legacy.shared',
 			'mediawiki.legacy.commonPrint',
-			'mediawiki.ui.button',
 			'mediawiki.sectionAnchor'
 		);
 		if ( $out->isSyndicated() ) {
 			$moduleStyles[] = 'mediawiki.feedlink';
 		}
+
+		// Deprecated since 1.26: Unconditional loading of mediawiki.ui.button
+		// on every page is deprecated. Express a dependency instead.
+		if ( strpos( $out->getHTML(), 'mw-ui-button' ) !== false ) {
+			$moduleStyles[] = 'mediawiki.ui.button';
+		}
+
 		$out->addModuleStyles( $moduleStyles );
 	}
 
